--- a/etl_project/pipelines/run.yaml
+++ b/etl_project/pipelines/run.yaml
@@ -1,7 +1,3 @@
-raw_pipeline_name: raw_pipeline
-serving_pipeline_name: serving_pipeline
+pipeline_name: project_1_pipeline
 config:
   log_folder_path: "./etl_project/logs"
-schedule:
-  run_seconds: 5
-  poll_seconds: 2
