--- a/template.env
+++ b/template.env
@@ -1,38 +1,50 @@
-#### for local development:
+######## for local development ########
 
 MARKET_STACK_ACCESS_KEY="<market_stack_api_key>"
 FIXER_ACCESS_KEY="<fixer_api_key>"
 
 SERVER_NAME="localhost"
-DB_USERNAME="postgres"
-DB_PASSWORD="postgres"
 DATABASE_NAME="raw"
+DB_USERNAME="<db-username>"
+DB_PASSWORD="<db-password>"
 PORT=5432
 
 LOGGING_SERVER_NAME="localhost"
 LOGGING_DATABASE_NAME="logging"
-LOGGING_USERNAME="postgres"
-LOGGING_PASSWORD="postgres"
+LOGGING_USERNAME="<logging-db-username>"
+LOGGING_PASSWORD="<logging-db-password>"
 LOGGING_PORT=5432
 
+TARGET_SERVER_NAME="localhost"
+TARGET_DATABASE_NAME="serving"
+TARGET_DB_USERNAME="<target-db-username>"
+TARGET_DB_PASSWORD="<target-db-password>"
+TARGET_PORT=5432
 
 
 
-#### for docker container running on localhost:
+######## for docker container running on localhost ########
 
 MARKET_STACK_ACCESS_KEY=<market_stack_api_key>
 FIXER_ACCESS_KEY=<fixer_api_key>
 SERVER_NAME=host.docker.internal
 DATABASE_NAME=raw
-DB_USERNAME=postgres
-DB_PASSWORD=postgres
-PORT=5433
+DB_USERNAME=<db-username>
+DB_PASSWORD=<db-password>
+PORT=5432
+
 LOGGING_SERVER_NAME=host.docker.internal
-LOGGING_DATABASE_NAME=raw
-LOGGING_USERNAME=postgres
-LOGGING_PASSWORD=postgres
-LOGGING_PORT=5433
+LOGGING_DATABASE_NAME=logging
+LOGGING_USERNAME=<logging-db-username>
+LOGGING_PASSWORD=<logging-db-password>
+LOGGING_PORT=5432
+
+TARGET_SERVER_NAME=host.docker.internal
+TARGET_DATABASE_NAME=serving
+TARGET_DB_USERNAME=target-db-username>
+TARGET_DB_PASSWORD=<target-db-password>
+TARGET_PORT=5432
 
 
 
-#### for AWS ECS container running on RDS:
+######## for AWS ECS container running on RDS ########
