Finished Docker setup - Dockerfile & docker-compose.yml.
TIME POINT - code runs successfully with `docker compose up`

--- a/template.env
+++ b/template.env
@@ -23,25 +23,31 @@ TARGET_PORT=5432
 
 
 
-######## for docker container running on localhost ########
+######## for running in docker containers          ########
+######## Note: no quotation marks (" ") on values  ########
 
+# postgres image
+POSTGRES_PASSWORD=<postgres:14-image-postgres-password>
+
+# etl project 
 MARKET_STACK_ACCESS_KEY=<market_stack_api_key>
 FIXER_ACCESS_KEY=<fixer_api_key>
-SERVER_NAME=host.docker.internal
+
+SERVER_NAME=<container-name-in-docker-compose: i.e. postgres_14_container>
 DATABASE_NAME=raw
 DB_USERNAME=<db-username>
 DB_PASSWORD=<db-password>
 PORT=5432
 
-LOGGING_SERVER_NAME=host.docker.internal
+LOGGING_SERVER_NAME=<container-name-in-docker-compose: i.e. postgres_14_container>
 LOGGING_DATABASE_NAME=logging
 LOGGING_USERNAME=<logging-db-username>
 LOGGING_PASSWORD=<logging-db-password>
 LOGGING_PORT=5432
 
-TARGET_SERVER_NAME=host.docker.internal
+TARGET_SERVER_NAME=<container-name-in-docker-compose: i.e. postgres_14_container>
 TARGET_DATABASE_NAME=serving
-TARGET_DB_USERNAME=target-db-username>
+TARGET_DB_USERNAME=<target-db-username>
 TARGET_DB_PASSWORD=<target-db-password>
 TARGET_PORT=5432
 
