Add volume to project_1_etl_container
TIME POINT - code runs successfully with `docker compose up`

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -24,7 +24,10 @@ services:
         condition: service_healthy
     env_file:
       - docker.env
+    volumes:
+      - etl_data:/app
      
 volumes:
-  project_1_postgres_data:
+  postgres_data:
+  etl_data:
    
