--- a/template.env
+++ b/template.env
@@ -1,4 +1,4 @@
-######## for local development ########
+########  for file:  .env  ########
 
 MARKET_STACK_ACCESS_KEY="<market_stack_api_key>"
 FIXER_ACCESS_KEY="<fixer_api_key>"
@@ -11,20 +11,20 @@ PORT=5432
 
 LOGGING_SERVER_NAME="localhost"
 LOGGING_DATABASE_NAME="logging"
-LOGGING_USERNAME="<logging-db-username>"
-LOGGING_PASSWORD="<logging-db-password>"
+LOGGING_USERNAME="<db-username>"
+LOGGING_PASSWORD="<db-password>"
 LOGGING_PORT=5432
 
 TARGET_SERVER_NAME="localhost"
 TARGET_DATABASE_NAME="serving"
-TARGET_DB_USERNAME="<target-db-username>"
-TARGET_DB_PASSWORD="<target-db-password>"
+TARGET_DB_USERNAME="<db-username>"
+TARGET_DB_PASSWORD="<db-password>"
 TARGET_PORT=5432
 
 
 
-######## for running in docker containers          ########
-######## Note: no quotation marks (" ") on values  ########
+
+########  for file:  docker.env  ########
 
 # postgres image
 POSTGRES_PASSWORD=<postgres:14-image-postgres-password>
@@ -41,16 +41,37 @@ PORT=5432
 
 LOGGING_SERVER_NAME=<container-name-in-docker-compose: i.e. postgres_14_container>
 LOGGING_DATABASE_NAME=logging
-LOGGING_USERNAME=<logging-db-username>
-LOGGING_PASSWORD=<logging-db-password>
+LOGGING_USERNAME=<db-username>
+LOGGING_PASSWORD=<db-password>
 LOGGING_PORT=5432
 
 TARGET_SERVER_NAME=<container-name-in-docker-compose: i.e. postgres_14_container>
 TARGET_DATABASE_NAME=serving
-TARGET_DB_USERNAME=<target-db-username>
-TARGET_DB_PASSWORD=<target-db-password>
+TARGET_DB_USERNAME=<db-username>
+TARGET_DB_PASSWORD=<db-password>
 TARGET_PORT=5432
 
 
 
-######## for AWS ECS container running on RDS ########
+########  for file:  aws.env  ########
+
+MARKET_STACK_ACCESS_KEY=<market_stack_api_key>
+FIXER_ACCESS_KEY=<fixer_api_key>
+
+SERVER_NAME=<aws-rds-endpoint>
+DATABASE_NAME=raw
+DB_USERNAME=<aws-rds-username>
+DB_PASSWORD=<aws-rds-password>
+PORT=5432
+
+LOGGING_SERVER_NAME=<aws-rds-endpoint>
+LOGGING_DATABASE_NAME=logging
+LOGGING_USERNAME=<aws-rds-username>
+LOGGING_PASSWORD=<aws-rds-password>
+LOGGING_PORT=5432
+
+TARGET_SERVER_NAME=<aws-rds-endpoint>
+TARGET_DATABASE_NAME=serving
+TARGET_DB_USERNAME=<aws-rds-username>
+TARGET_DB_PASSWORD=<aws-rds-password>
+TARGET_PORT=5432
